--- a/KotlinTest/build.gradle
+++ b/KotlinTest/build.gradle
@@ -43,5 +43,25 @@ dependencies {
 
 
     compile 'com.yinglan.alphatabs:library:1.0.8'
+    compile 'com.github.luckyandyzhang:CleverRecyclerView:1.0.0'
+    //指定版本
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
+
+
+//    compile 'com.zhouyou:rxeasyhttp:2.0.6'
+//    compile 'com.tsy:myokhttp:1.1.4'
+
+
+
+    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
 }
+
+
+
+
