--- a/KotlinTest/build.gradle
+++ b/KotlinTest/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-6'
     implementation 'com.github.liang979zhang:Utils:1.23'
     implementation 'com.android.support:cardview-v7:26.+'
+    compile 'com.hyman:flowlayout-lib:1.1.2'
 }
 
 
